--- a/veevalidate/package.json
+++ b/veevalidate/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "vee-validate": "^3.3.9",
     "vue": "^2.6.11",
-    "vue-i18n": "^8.21.0"
+    "vue-i18n": "^8.21.0",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
