--- a/veevalidate/package.json
+++ b/veevalidate/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.17.0",
     "core-js": "^3.6.5",
     "vee-validate": "^2.2.15",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
     "vue-i18n": "^8.21.0",
     "vue-router": "^2.0.3"
   },
